# Vajra

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
configs/: node_1.toml  node_2.toml  node_3.toml
crates/vajra-common/: Cargo.toml
crates/vajra-common/src/: config.rs  error.rs  lib.rs  telemetry.rs  types.rs
crates/vajra-engine/: Cargo.toml
crates/vajra-engine/benches/: hnsw_bench.rs
crates/vajra-engine/src/: distance.rs  lib.rs  types.rs
crates/vajra-engine/src/hnsw/: index.rs  mod.rs  node.rs
crates/vajra-raft/: Cargo.toml
crates/vajra-raft/src/: lib.rs  log.rs  messages.rs  node.rs  state.rs
crates/vajra-server/: Cargo.toml
crates/vajra-server/src/: config.rs  http.rs  main.rs  reactor.rs  state_machine.rs  transport.rs
crates/vajra-transport/: Cargo.toml  build.rs
crates/vajra-transport/src/: error.rs  id_mapper.rs  lib.rs  service.rs
crates/vajra-wal/: Cargo.toml
crates/vajra-wal/src/: entry.rs  lib.rs  segment.rs  wal.rs
data/: README.md
docs/: ARCHITECTURE.md  RUNBOOK.md  index.html
proto/vajra/v1/: raft_service.proto  vector_service.proto
scripts/: trinity_demo.ps1
tests/integration/: mod.rs
tests/simulation/: mod.rs
