[package]
name = "vajra-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Vajra distributed vector database server binary"

[[bin]]
name = "vajra"
path = "src/main.rs"

[dependencies]
vajra-common = { workspace = true }
vajra-engine = { workspace = true }
vajra-wal = { workspace = true }
vajra-raft = { workspace = true }
vajra-transport = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP (for metrics endpoint)
axum = { workspace = true }
tower = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
