[package]
name = "vajra-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "gRPC transport layer for Vajra"

[dependencies]
vajra-common = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }

# gRPC
tonic = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
