[package]
name = "vajra-wal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Write-Ahead Log implementation for Vajra"

[dependencies]
vajra-common = { workspace = true }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# I/O
byteorder = "1.5"
memmap2 = { workspace = true }
crc32fast = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Tracing
tracing = { workspace = true }

# Async
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
